--- a/arch/arm64/configs/blast_rosy_defconfig
+++ b/arch/arm64/configs/blast_rosy_defconfig
@@ -4515,9 +4515,13 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 
-#
+#CPU hotplug
+CONFIG_ASMP=y
+CONFIG_ASMP_SUSPEND=y
+CONFIG_POWERSUSPEND=y
+CONFIG_ALUCARD_HOTPLUG=y
+
 # IO Schedulers
-#
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
