--- a/arch/arm64/configs/blast_rosy_defconfig
+++ b/arch/arm64/configs/blast_rosy_defconfig
@@ -4516,20 +4516,30 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 
 #CPU hotplug
+
 CONFIG_ASMP=y
 CONFIG_ASMP_SUSPEND=y
 CONFIG_POWERSUSPEND=y
 CONFIG_ALUCARD_HOTPLUG=y
 
+
 # IO Schedulers
+
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_ZEN=y
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+# CONFIG_DEFAULT_SIOPLUS is not set
+CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
