--- a/arch/arm64/configs/blast_rosy_defconfig
+++ b/arch/arm64/configs/blast_rosy_defconfig
@@ -4514,6 +4514,7 @@ CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 #CPU hotplug
 
