--- a/arch/arm64/configs/blast_rosy_defconfig
+++ b/arch/arm64/configs/blast_rosy_defconfig
@@ -3774,7 +3774,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
-# CONFIG_CPUSETS is not set
+CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHED=y
